<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SongDetailsActivity">

    <LinearLayout
        android:id="@+id/tv_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/back_button_image"
            app:layout_constraintBottom_toBottomOf="@+id/tv_song_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_song_name"
            app:srcCompat="@drawable/ic_back_button" />

        <TextView
            android:id="@+id/tv_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/song_name_textView"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/iv_back_button"
            app:layout_constraintRight_toLeftOf="@+id/iv_share"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@id/tv_song_name"
            app:layout_constraintLeft_toRightOf="@id/tv_song_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/share"
            android:contentDescription="@string/share_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_action_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/artist_name_text_view"/>

    <ImageView
        android:id="@+id/iv_song_icon"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:padding="10dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/image_of_song_logo"
        app:layout_constraintTop_toBottomOf="@+id/tv_artist_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <SeekBar
        android:id="@+id/sb_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="45dp"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_song_icon" />

    <TextView
        android:id="@+id/tv_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/_00_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_seekBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/_00_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_seekBar"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/ll_icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="70dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/sb_seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_sequence"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/shuffle_songs"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_repeat_all" />

        <ImageView
            android:id="@+id/iv_prev"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/previous_song"
            app:srcCompat="@drawable/previous" />

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/play_pause_button"
            app:srcCompat="@drawable/pause" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/next_song_button"
            app:srcCompat="@drawable/next" />

        <ImageView
            android:id="@+id/iv_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/repeat_current_song_button"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_list_24" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>